{не видит в communities/urls.py - communities_list. Ничего не работает помогите пожалуйста......}

--- a/lab1/templates/homepage.html
+++ b/lab1/templates/homepage.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="{% static 'css/style_homepage.css' %}">
+    <script src="{% static 'js_scripts/script.js' %}"></script>
+    <title>Главная</title>
 </head>
 <body>
     <h1>Главная страница</h1>
