ЗАВЕРШИЛАgit add .git add .git add .! все задания выполнены

--- a/lab1/templates/homepage.html
+++ b/lab1/templates/homepage.html
@@ -1,15 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-{% load static %}
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'css/style_homepage.css' %}">
-    <script src="{% static 'js_scripts/script.js' %}"></script>
-    <title>Главная</title>
-</head>
-<body>
+{% extends 'layout.html' %}
+
+{% block title %}
+    Главная страница
+{% endblock %}
+
+{% block content %}
     <h1>Главная страница</h1>
-</body>
-</html>
+{% endblock %}
