--- a/lab1/static/css/style.css
+++ b/lab1/static/css/style.css
@@ -3,11 +3,28 @@
     padding: 0;
     box-sizing: border-box;
 }
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-flow: column;
+}
 
-body{
-    height: 100%;
-    text-align: center;
-    font-size: 3rem;
-    background-color: rgb(68, 10, 10);
-    color: white;
+main {
+    flex-grow: 1;
+    display: grid;
+    place-content: center;
+}
+
+a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 1.5em;
+}
+
+a:hover {
+    opacity: .85;
+}
+
+li{
+    display: inline;
 }
