--- a/lab1/templates/layout.html
+++ b/lab1/templates/layout.html
@@ -6,9 +6,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>{% block title %} Приложение Django {% endblock %}</title>
         <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-        <script src="{% static 'js/main.js' %}" defer></script>
+        <script src="{% static 'js/script.js' %}" defer></script>
     </head>
     <body>
+        <ul>
+            <li><a href="/">Главная страница</a></li>
+            <li><a href="/about">Обо мне</a></li>
+            <li><a href="/posts">Посты</a></li>
+            <li><a href="/communities">Группы</a></li>
+        </ul>
         <main>{% block content %} {% endblock %}</main>
     </body>
 </html>
