--- a/lab1/static/css/style.css
+++ b/lab1/static/css/style.css
@@ -12,13 +12,19 @@ body {
 main {
     flex-grow: 1;
     display: grid;
-    place-content: center;
+    text-align: center;
+    margin-top: 3%;
+}
+
+ul{
+    text-align: center;
 }
 
 a {
     text-decoration: none;
     color: #000000;
     font-size: 1.5em;
+    
 }
 
 a:hover {
@@ -27,4 +33,6 @@ a:hover {
 
 li{
     display: inline;
+    margin-left: 1%;
+   
 }
