--- a/lab1/templates/layout.html
+++ b/lab1/templates/layout.html
@@ -12,8 +12,8 @@
         <ul>
             <li><a href="/">Главная страница</a></li>
             <li><a href="/about">Обо мне</a></li>
-            <li><a href="/posts">Посты</a></li>
-            <li><a href="/communities">Группы</a></li>
+            <li><a href="{% url 'posts:list' %}">Посты</a></li>
+            <li><a href="{% url 'communities:list' %}">Группы</a></li>
         </ul>
         <main>{% block content %} {% endblock %}</main>
     </body>
